--- a/expense-tracker-api/src/main/resources/application.properties
+++ b/expense-tracker-api/src/main/resources/application.properties
@@ -8,9 +8,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/expense_tracker
 spring.datasource.username=postgres
 spring.datasource.password=19940306
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.session.store-type=none
 
 # JPA / Hibernate Settings
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
