--- a/expense-tracker-app/package.json
+++ b/expense-tracker-app/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.12.2",
     "firebase": "^10.9.0",
     "framer-motion": "^12.23.16",
     "react": "^18.2.0",
