--- a/expense-tracker-app/package.json
+++ b/expense-tracker-app/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.12.2",
     "firebase": "^10.9.0",
     "framer-motion": "^12.23.16",
+    "lucide-react": "^0.548.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
